...
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/OrdersButton" />

    <Button
        android:id="@+id/MenuButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="255dp"
        android:layout_height="86dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button"
        android:text="@string/menu"
...
